styles/index.css
body {
    background-image: url('../images/background-main.jpeg');
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}
.wrapper {
    width: 100vw;
    height: 100vh;
    max-height: 960px;
    max-width: 640px;
    background-image: url('../images/background.png');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: top center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

section {
    margin: 20px 0;
}
main {
    margin-bottom: 50px;
    overflow-y: scroll;
}
main::-webkit-scrollbar {
    display: none;
}

.heading {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 5vw;
    justify-content: center;
}

.heading__logo {
    display: flex;
    align-items: center;
}

.heading__image {
    width: 22vw;
}
.heading__text {
    margin-bottom: 10px;
    padding: 10px 0;
    background-color: rgba(255, 255, 255, 0.4);
    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.4);
}

.heading__text > h1, h3 {
    font-family: Lekton;
    font-style: normal;
    text-align: center;
}

.heading__title {
    font-weight: bold;
    font-size: 8vw;
    line-height: 8vw;
    color: #FFFBFB;
}

.heading__subtitle {
    font-weight: normal;
    font-size: 3vw;
    line-height: 3vw;
    color: #FFFFFF;
}
a {
    text-decoration: none;
}
.contents__btn {
    text-align: center;
    border: 3px solid #E9D523;
    margin: 10px 0;
    width: 60vw;
    max-width: 800px;
    height: 10vw;
    border-radius: 10px;
    transform-style: preserve-3d;
    transform: perspective(8vw) rotateX(4deg);
    transform-origin: bottom center;

    font-family: Lekton;
    font-style: normal;
    font-weight: bold;
    font-size: 5vw;
    line-height: 5vw;
    letter-spacing: 0.1em;
    color: #FFFFFF;
    display: flex;
    align-items: center;
    justify-content: center;
}
.contents__btn:hover {
    background: linear-gradient(88.6deg, #E9D523 9.14%, rgba(234, 221, 109, 0) 99.99%, rgba(234, 223, 122, 0) 100%), #259FE3;
}
.contents__clearfix {
    color: #259FE3;
    margin: 50px 0;
}
.contents__btns {
    display: flex;
    flex-direction: column;
    align-items: center;
}
i {
    margin-right: 20px;
}
hr {
    border: 1px solid #259FE3;
}
@media (min-width: 640px) {
    .contents__btn {
        width: 243px;
        height: 53px;
        margin: 5px;
        font-size: 25px;
        line-height: 25px;
    }
    .contents__btns {
        justify-content: center;
        margin: 0 25px;
    }
    .heading__title {
        font-size: 50px;
        line-height: 50px;
    }
    .heading__subtitle {
        font-size: 20px;
        line-height: 20px;
    }
    .heading {
        margin-top: 30px;
    }
    .wrapper {
        background-size: contain;
    }
    .heading__image {
        width: 130px;
    }
    section {
        margin: 10px 0;
    }
    .heading__text {
        padding: 0;
    }

}

